# app-vox-ia

./: .gitignore  .gitlab-ci.yml  DOCKER.md  FIX_FRONTEND_NOW.sh  FRONTEND_QUICK_FIX.md  FRONTEND_TROUBLESHOOTING.md  LICENSE  Makefile  MinutIA-Arquitectura-Hexagonal.md  README.md  README_FIX_STATUS.md  ci-cd-explicacion.md  docker-build-push.sh  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  FileUpload.tsx  README.md  ResultsPanel.tsx  authService.ts  generate_grpc.py  grpc_server.py  mlflow.db  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: audio_router.py  schemas.py
backend/app/application/use_cases/: process_audio_use_case.py
backend/app/core/: config.py  security.py
backend/app/domain/entities/: audio_analysis.py  meeting.py  pipeline_metrics.py  user.py
backend/app/domain/exceptions/: audio_exceptions.py  auth_exceptions.py
backend/app/domain/interfaces/: summarization_service.py  transcription_service.py
backend/app/domain/use_cases/: analyze_audio.py  export_pdf.py  login.py  refresh_token.py
backend/app/domain/value_objects/: audio_format.py  language.py
backend/app/grpc_service/: grpc_client.py  voxia.proto  voxia_pb2.py  voxia_pb2_grpc.py
backend/app/infrastructure/ai/: flan_t5_service.py  whisper_service.py
backend/app/infrastructure/config/: settings.py
backend/app/infrastructure/container/: dependencies.py
backend/app/infrastructure/exceptions/: handlers.py
backend/app/models/: user.py
backend/app/routers/: audio.py  auth.py
backend/app/services/: ai_service.py  mlflow_tracker.py  pdf_service.py
backend/mlruns/: mlflow.db
backend/mlruns/0/: meta.yaml
backend/mlruns/128297193084351484/: meta.yaml
backend/mlruns/128297193084351484/fbdd575c188f4745a6ecb5e12426592f/: meta.yaml
backend/mlruns/699597640788811626/: meta.yaml
backend/mlruns/699597640788811626/0b1c78c5dd9349c1860938b15a7ab6e1/: meta.yaml
backend/mlruns/699597640788811626/175a5e65a13143e7adb4fb974b7c1c36/: meta.yaml
backend/mlruns/699597640788811626/4c5f1f240bd84971bb432365a5b089b2/: meta.yaml
backend/mlruns/699597640788811626/52cc64f8fe0f4268ba55aef042010c1f/: meta.yaml
backend/mlruns/699597640788811626/7162fb1a93464524acef2ed12209e9b4/: meta.yaml
backend/mlruns/699597640788811626/a931c8f461c04c19aa33f78c9872d102/: meta.yaml
backend/mlruns/699597640788811626/f248f2b11320499b815d5a4a4812c80a/: meta.yaml
backend/mlruns/699597640788811626/tags/: modelos  (+2 more)
backend/tests/: test_ai_service.py  test_grpc_client.py  test_mlflow_tracker.py
backend/tests/unit/: conftest.py  test_ai_service.py  test_grpc_client.py  test_mlflow_tracker.py
(+356 files in other folders)
