[project]
name = "vox-ia-backend"
version = "0.1.0"
description = "Backend API for VoxIA - Audio transcription and meeting summarization"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "transformers>=4.44.0,<4.52.0",
    # torch/torchaudio 2.2.x = last release with macOS Intel (x86_64) wheels.
    # On Linux / Apple Silicon upgrade to: "torch>=2.5.0"
    "torch>=2.1.0,<=2.2.2",
    "torchaudio>=2.1.0,<=2.2.2",
    "soundfile>=0.12.0",
    "numpy>=1.26.0,<2.0.0",
    "pydantic>=2.10.0",
    "accelerate>=0.34.0",
    "sentencepiece>=0.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.24.0",
]

[tool.uv]
package = false
