[project]
name = "voxia-backend"
version = "1.0.0"
description = "VoxIA Backend — Transcripción y análisis de reuniones con IA"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.9",
    "python-dotenv==1.0.1",
    "transformers==4.44.2",
    "torch==2.4.1",
    "openai-whisper==20240930",
    "ffmpeg-python==0.2.0",
    "sentencepiece==0.2.0",
    "accelerate==0.34.2",
    "numpy==1.26.4",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "aiofiles==24.1.0",
    "reportlab==4.2.5",
]

[tool.uv]
dev-dependencies = []

[tool.uv.extra-build-dependencies]
openai-whisper = ["setuptools"]